# BlockSettleDB

./: .gitignore  .gitmodules  ArmoryQt.py  BIP150_151.md  CMakeLists.txt  CMakeSettings.json  Makefile.am  README.md  README_3rdPartyLibraries.md  README_ArmoryDB.md  README_macOS.md  SDM.py  armorycolors.py  armorymodels.py  build.bat  configure.ac  dynamicImport.py  guardian.py  jasvet.py  qrcodenative.py  qtdefines.py  qtdialogs.py  subprocess_win.py  ubuntu.Dockerfile  update_version.py  writeNSISCompilerArgs.py
armoryengine/: ALL.py  AddressUtils.py  BDM.py  (+17 more)
cppForSwig/: Accounts.cpp  Accounts.h  Addresses.cpp  Addresses.h  ArmoryBackups.cpp  ArmoryBackups.h  ArmoryConfig.cpp  ArmoryConfig.h  ArmoryErrors.h  AssetEncryption.cpp  AssetEncryption.h  Assets.cpp  Assets.h  AsyncClient.cpp  AsyncClient.h  AuthorizedPeers.cpp  AuthorizedPeers.h  BDM_Server.cpp  BDM_Server.h  BDM_mainthread.cpp  BDM_mainthread.h  BDVCodec.h  BDV_Notification.h  BIP150_151.cpp  BIP150_151.h  BIP151.cpp  BIP151.h  BIP15x_Handshake.cpp  BIP15x_Handshake.h  BIP32_Node.cpp  BIP32_Node.h  BIP32_Serialization.cpp  BIP32_Serialization.h  BinaryData.cpp  BinaryData.h  BitcoinArmory.sln  BitcoinP2P.cpp  BitcoinP2p.h  BitcoinSettings.cpp  BitcoinSettings.h  (+138 more)
cppForSwig/BDM_Client/: BDM_Client.vcxproj  BDM_Client.vcxproj.filters
cppForSwig/BitcoinArmory_CppTests/: BitcoinArmory_CppTests.vcxproj  BitcoinArmory_CppTests.vcxproj.filters
cppForSwig/BlockDataManager/: BlockDataManager.vcxproj  BlockDataManager.vcxproj.filters
cppForSwig/BlockchainDatabase/: BlockDataMap.cpp  BlockDataMap.h  BlockObj.cpp  BlockObj.h  BlockUtils.cpp  BlockUtils.h  BlockchainScanner.cpp  BlockchainScanner.h  BlockchainScanner_Super.cpp  BlockchainScanner_Super.h  DatabaseBuilder.cpp  DatabaseBuilder.h  ScrAddrFilter.cpp  SshParser.cpp  StoredBlockObj.cpp  TxHashFilters.cpp  lmdb_wrapper.cpp  lmdb_wrapper.h
cppForSwig/BridgeAPI/: BridgeMain.cpp  BridgeSocket.cpp  BridgeSocket.h  CppBridge.cpp  CppBridge.h  PassphrasePrompt.cpp  PassphrasePrompt.h  ProtobufCommandParser.cpp  ProtobufCommandParser.h  ProtobufConversions.cpp  ProtobufConversions.h  WalletManager.cpp  WalletManager.h
cppForSwig/ContainerTests/: ContainerTests.vcxproj
cppForSwig/DB1kIterTest/: DB1kIterTest.vcxproj  DB1kIterTest.vcxproj.filters
cppForSwig/KeyManager/: KeyManager.vcxproj  KeyManager.vcxproj.filters
cppForSwig/LMDB_Win/: LMDB_Win.vcxproj  LMDB_Win.vcxproj.filters
cppForSwig/Signer/: LegacySigner.cpp  LegacySigner.h  ResolverFeed.cpp  ResolverFeed.h  ResolverFeed_Wallets.cpp  ResolverFeed_Wallets.h  Script.cpp  Script.h  ScriptRecipient.cpp  ScriptRecipient.h  SigHashEnum.h  Signer.cpp  Signer.h  Transactions.cpp  Transactions.h  TxEvalState.cpp  TxEvalState.h
cppForSwig/SignerTests/: SignerTests.vcxproj  SignerTests.vcxproj.filters
cppForSwig/SupernodeTests/: SupernodeTests.vcxproj  SupernodeTests.vcxproj.filters
cppForSwig/WalletTests/: WalletTests.vcxproj  WalletTests.vcxproj.filters
cppForSwig/Wallets/: Addresses.cpp  Addresses.h  AssetEncryption.cpp  AssetEncryption.h  Assets.cpp  Assets.h  AuthorizedPeers.cpp  AuthorizedPeers.h  BIP32_Node.cpp  BIP32_Node.h  DecryptedDataContainer.cpp  DecryptedDataContainer.h  DerivationScheme.cpp  DerivationScheme.h  EncryptedDB.cpp  EncryptedDB.h  PassphraseLambda.h  WalletFileInterface.cpp  WalletFileInterface.h  WalletHeader.cpp  WalletHeader.h  WalletIdTypes.cpp  WalletIdTypes.h  Wallets.cpp  Wallets.h
cppForSwig/Wallets/Accounts/: AccountTypes.cpp  AccountTypes.h  AddressAccounts.cpp  AddressAccounts.h  AssetAccounts.cpp  AssetAccounts.h  MetaAccounts.cpp  MetaAccounts.h
cppForSwig/Wallets/Seeds/: Backups.cpp  Backups.h  Seeds.cpp  Seeds.h
cppForSwig/chacha20poly1305/: CMakeLists.txt  Makefile.am  chacha.h  chachapoly_aead.c  poly1305.h
cppForSwig/cryptopp/: CMakeLists.txt  cryptopp.vcxproj  rng.cpp  rng.h
cppForSwig/fcgi/libfcgi/: os_win32.c
cppForSwig/gtest/: BIP151RekeyTest.cpp  CMakeLists.txt  ContainerTests.cpp  CppBlockUtilsTests.cpp  DB1kIterTest.cpp  NodeUnitTest.cpp  NodeUnitTest.h  SignerTests.cpp  SupernodeTests.cpp  TestUtils.cpp  TestUtils.h  UtilsTests.cpp  WalletTests.cpp  ZeroConfTests.cpp
cppForSwig/gtest/input_files/: identity-key-ipv4  identity-key-ipv4.pub
cppForSwig/gtest/input_files/bip150v0_cli1/: authorized-peers-v4  known-peers-v4
cppForSwig/gtest/input_files/bip150v0_srv1/: identity-key-ipv4  identity-key-ipv4.pub  known-peers-v4
cppForSwig/guardian/: guardian.vcxproj
cppForSwig/hkdf/: Makefile.am  configure.ac  hkdf.c  hkdf.h
cppForSwig/leveldb_windows_port/win32_posix/: dirent_win32.cpp  pthread_win32port.cpp  win32_posix.cc
cppForSwig/libbtc/: CMakeLists.txt  Makefile.am  configure.ac  libbtc.pc.cmakein
cppForSwig/libbtc/include/btc/: bip32.h  btc.h  ecc_key.h  portable_endian.h
cppForSwig/libbtc/src/: base58.c  bip32.c  commontools.c  ecc_key.c  ecc_libsecp256k1.c  libbtc-config.h.cmakein  random.c  script.c  tx.c  utils.c
cppForSwig/libbtc/src/secp256k1/: CMakeLists.txt  Makefile.am  libsecp256k1.pc.cmakein
cppForSwig/libbtc/src/secp256k1/include/: secp256k1.h
cppForSwig/libbtc/src/secp256k1/src/: libsecp256k1-config.h.cmakein
cppForSwig/libbtc/src/tools/: bitcointool.c
cppForSwig/libbtc/test/: block_tests.c  eckey_tests.c  sha2_tests.c  tool_tests.c  tx_tests.c  unittester.c  wallet_tests.c
cppForSwig/libbtc_win/: libbtc_win.vcxproj  libbtc_win.vcxproj.filters
cppForSwig/libwebsockets/: .gitignore  websockets.vcxproj
cppForSwig/libwebsockets/lib/: libwebsockets.h
cppForSwig/libwebsockets/lib/roles/h1/: client-h1.c
cppForSwig/libwebsockets/lib/roles/ws/: server-ws.c
cppForSwig/lmdb/: mdb.c
cppForSwig/lmdb/libraries/liblmdb/: CMakeLists.txt  lmdb.h  lmdbpp.cpp  lmdbpp.h  mdb.c
cppForSwig/lmdbpp/: CMakeLists.txt  lmdbpp.cpp  lmdbpp.h
cppForSwig/protobuf/: BDVCommand.proto  BridgeProto.proto  ClientProto.proto  CommonTypes.proto  LedgerEntry.proto  NodeStatus.proto  Signer.proto  Utxo.proto
cppForSwig/protobuf_win/: protobuf_win.vcxproj  protobuf_win.vcxproj.filters
cppForSwig/reorgTest/: blkdata.h
(+138 files in other folders)
